--- a/html/login.html
+++ b/html/login.html
@@ -18,6 +18,7 @@
 
         <p class="lc-label">Password</p>
         <input type="password" id="password-input">
+        <input type="hidden" id="csrf-token" value="{{ csrfToken }}">
 
         <br>
         <button id="login-btn">Login</button>
